infrastructure/builder/taskcluster-spec/deploy.yml
---
resources:
- name: ping-web-deployment
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: ping
  spec:
    $let:
      service: {$eval: "builtService('ping')"}
    in:
      selector:
        matchLabels:
          app: taskcluster
          tc-service: ping
          tc-proc: web
      replicas: 1
      template:
        metadata:
          labels:
            app: taskcluster
            tc-service: ping
            tc-proc: web
        spec:
          containers:
          - name: ping
            image: {$eval: "service.dockerImage"}
            args: [web]
            resources:
              requests:
                cpu: 100m
                memory: 100Mi
            ports:
            - containerPort: 80

- name: ping-web-service
  kind: Service
  apiVersion: v1
  metadata:
    name: ping
  spec:
    $let:
      service: {$eval: "builtService('ping')"}
    in:
      selector:
        app: taskcluster
        tc-service: ping
        tc-proc: web
      ports:
      - protocol: TCP
        port: 80
        targetPort: 80

- name: tools-web-deployment
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: tools
  spec:
    $let:
      service: {$eval: "builtService('tools')"}
    in:
      selector:
        matchLabels:
          app: taskcluster
          tc-service: tools
          tc-proc: web
      replicas: 1
      template:
        metadata:
          labels:
            app: taskcluster
            tc-service: tools
            tc-proc: web
        spec:
          containers:
          - name: tools
            image: {$eval: "service.dockerImage"}
            resources:
              requests:
                cpu: 10m
                memory: 100Mi
            ports:
            - containerPort: 80

- name: tools-web-service
  kind: Service
  apiVersion: v1
  metadata:
    name: tools
  spec:
    $let:
      service: {$eval: "builtService('tools')"}
    in:
      selector:
        app: taskcluster
        tc-service: tools
        tc-proc: web
      ports:
      - protocol: TCP
        port: 80
        targetPort: 80
